--- a/index.html
+++ b/index.html
@@ -7,5 +7,12 @@
   </head>
   <body>
     <p>first commit</p>
+
+    <!-- feature 1 2/ 登入功能 -->
+    <form action="">
+      <input type="email" />
+      <input type="password" />
+      <button>登入</button>
+    </form>
   </body>
 </html>
