--- a/index.html
+++ b/index.html
@@ -20,5 +20,10 @@
 
     <!-- 第一次更新 -->
     <p>new change</p>
+    <!-- A在 featue3 line23-27 add hi*3 -->
+    <p>hi</p>
+    <p>hi</p>
+    <p>hi</p>
+    <p>hi</p>
   </body>
 </html>
